# realestate-agent

./: .cursor  .dockerignore  .gitignore  AGENTS.md  ASSET_PIPELINE_README.md  AUTHENTICATION_README.md  DEVELOPMENT_CHECKLIST.md  DOCKER_README.md  Dockerfile.mcp  GOOGLE_OAUTH_SETUP.md  LICENSE  PRD.md  README.md  REQUIREMENTS_README.md  TODO.md  alerts.py  backend_django  claude_config.json  dev_start.sh  docker-compose.yml  docker-start.sh  dump.rdb  env.development  env.docker  env.example  gis.py  gov.py  health-check.sh  install-all.sh  install-core.sh  pyproject.toml  pytest-ci.ini  pytest.ini  realestate.db  render.yaml  requirements.txt  run_all.sh  run_tests.py  scheduler.py  setup.py  (+8 more)
.github/: settings.yml
backend-django/: Dockerfile  README.md  __init__.py  celerybeat-schedule-shm  celerybeat-schedule-wal  dump.rdb  manage.py  realestate.db  requirements.txt  setup_auth.py
client/: openapi.yaml
crm/: analytics.py
data-gov-il-mcp-main/: package.json
db/: __init__.py  database.py  models.py  requirements.txt
docs/: ARCHITECTURE.md  CRM.md  DATA_LINEAGE.md  LEGAL.md  MCP_TOOLS.md  WORKFLOWS.md  alert-system.md  design-system.md  implementation-summary.md  microcopy-he.md  openapi-sdks.md  uiux-audit.md  uiux-plan.md
fixtures/: README.md  expected_outputs.json  source_records.json  synthetic_assets.json
gis/: __init__.py  cli.py  gis_client.py  parse_zchuyot.py  requirements.txt  rights_calculator.py  tel_aviv_gis.py
gov/: constants.py  decisive.py  nadlan_deals_scraper.py  requirements.txt
govmap/: __init__.py  api_client.py  requirements.txt  scraper.py
mavat/: __init__.py  cli.py  mavat_api_client.py  (+2 more)
(+567 files in other folders)
