[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realestate-agent"
version = "0.1.0"
description = "Real estate data collection and analysis tools"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4", 
    "lxml",
    "pdfplumber",
    "fastmcp",
    "python-dateutil",
    "pyproj",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
